# SummaryLLM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  memory.md  sitecustomize.py
digest-core/: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
digest-core/configs/: config.example.yaml
digest-core/deploy/: env.example  install-systemd.sh
digest-core/docs/: ARCHITECTURE.md  CORP_SESSION_RUNBOOK.md  DEPLOYMENT.md  PHASE0_PROMPT.md
digest-core/prompts/: extract_actions.en.v1.txt  extract_actions.v1.changelog  extract_actions.v1.txt
digest-core/scripts/: print_env.sh  quick-install.sh  run-local.sh  setup-env.sh  setup.sh  test.sh  test_run.sh
digest-core/src/digest_core/: cli.py  config.py  diagnostics.py  run.py  setup_wizard.py
digest-core/tests/: __init__.py  mock_llm_gateway.py  test_actions.py  test_adaptive_budget.py  test_balanced_selection.py  test_citations.py  test_cli.py  test_config.py  test_e2e_pipeline.py  test_email_cleaner.py  test_end2end_no_pii.py  test_enhanced_digest.py  test_evidence_enrichment.py  test_evidence_split.py  test_ews_ingest.py  test_gateway_tokens_init.py  test_hierarchical.py  test_hierarchical_orchestration.py  test_html_normalization.py  test_llm_gateway.py  test_mattermost_ping.py  test_min_bucket_guarantee.py  test_nlp_lemmatization.py  test_no_evidence_shortcut.py  test_observability.py  test_prompt_eval.py  test_ranker.py  test_selector.py  test_sender_fix_integration.py  test_setup_wizard.py  test_structural_segmentation.py  test_threading.py
digest_core/: __init__.py
(+57 files in other folders)
