[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digest-core"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic-settings>=2.4",
  "pydantic>=2.7",
  "structlog>=24.1",
  "httpx>=0.27",
  "exchangelib>=5.3.6",
  "tenacity>=9.0",
  "prometheus-client>=0.20",
  "beautifulsoup4>=4.12",
  "pytz>=2023.3",
  "pyyaml>=6.0",
  "regex>=2023.0",
  "jinja2>=3.1",
]

[project.scripts]
digest-core = "digest_core.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/digest_core"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that are intentionally slower than the rest of the suite",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
